# Bookstore

./: .gitignore  CMakeLists.txt  README.md  pre_task.cpp  开发文档.md
Learning_Stupid_JS!/: socketserver-demo.js  test.js  test2.html
Rubbish_Bookstore/: Account.cpp  Account.hpp  Accountstatus.cpp  Accountstatus.hpp  Book.cpp  Book.hpp  BookISBN.cpp  BookISBN.hpp  Check.cpp  Check.hpp  Finance.cpp  Finance.hpp  Log.cpp  Log.hpp  Processtxt.cpp  Processtxt.hpp  Rubbishaccountstore.cpp  Rubbishaccountstore.hpp  Store.cpp  Store.hpp  StoreISBN.hpp  Validator.cpp  Validator.hpp  account.cpp  account.hpp  code  main.cpp  pre_task.cpp  res.cpp
docs/: 开发文档.md  总体设计文档.md  用户手册.md  需求分析.md
html/: Bookstore.html  Custome.html  Employee.html  Login.html  Owner.html  Register.html  code  main.js
web/: code  main.html  main.js
