cmake_minimum_required(VERSION 3.0.0)
project(code)
set(CMAKE_CXX_STANDARD 17)
enable_testing()
add_executable(code
Rubbish_Bookstore/main.cpp
Rubbish_Bookstore/Book.cpp
Rubbish_Bookstore/Processtxt.cpp
Rubbish_Bookstore/Check.cpp
Rubbish_Bookstore/Accountstatus.cpp 
Rubbish_Bookstore/Account.cpp
Rubbish_Bookstore/Rubbishaccountstore.cpp)

